rework user create
